# crehana-backend-challenge

./: .env.example  .flake8  DECISION_LOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: auth.py  health.py  lists.py  tasks.py
app/application/: list_service.py  task_service.py
app/application/services/: auth_service.py  list_service.py
app/domain/: enums.py  exceptions.py  schemas.py
app/infrastructure/: config.py
app/infrastructure/auth/: jwt.py
app/infrastructure/db/: base.py  models.py  repositories.py
tests/integration/: test_api_flow.py
tests/unit/: test_list_service.py  test_task_service.py
